feat: util 기능  추가